--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,49 @@
 @import "tailwindcss";
+
+/* input field */
+.input {
+  padding: 7px;
+  border-radius: 5px;
+  border: 2px solid #c2c6ca;
+  outline: none;
+  transition: border 0.3s;
+}
+
+.input:focus {
+  border: 2px solid #b08a4f;
+}
+
+/* buttons */
+.button {
+  padding: 10px 15px;
+  border-radius: 10px;
+  color: white;
+  border:5px solid white;
+   transition: border 0.3s;
+}
+.save_button {
+  background: #2e3a59;
+}
+.save_button:hover{
+  border:5px solid #aebff0;
+}
+.generate_pdf {
+  background: #138808;
+}
+.generate_pdf:hover {
+  border:5px solid #bbe8b6;
+}
+
+.save_next {
+  background: #b08a4f;
+}
+
+.save_next:hover {
+   border:5px solid #edd2a7;
+}
+.previous {
+  background: #6c757d;
+}
+.previous:hover {
+   border:5px solid #cacbcc;
+}
