--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,3 +55,12 @@ body{
 .previous:hover {
    border:5px solid #cacbcc;
 }
+
+/*Navbars*/
+.navbar-element{
+  color: #2a2a2a;
+}
+
+.navbar-element:hover{
+  color: #15945a;
+}
