--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,8 @@ body{
   color: white;
   border:5px solid white;
    transition: border 0.3s;
+   text-decoration: none;
+   text-align: center;
 }
 .save_button {
   background: #2e3a59;
