--- a/client/src/App.css
+++ b/client/src/App.css
@@ -56,6 +56,34 @@ body{
    border:5px solid #cacbcc;
 }
 
+.edit_button{
+  background: #2e3a59;
+  border-radius: 1rem;
+}
+
+.edit_button:hover{
+  background-color: #485780;
+}
+
+.cancel_button{
+  background-color: #cdcecf;
+  color: #2a2a2a;
+  border-radius: 1rem;
+}
+
+.cancel_button:hover{
+  background-color:#e1e1e1 ;
+}
+
+.general_button{
+  background-color: #138808;
+  border-radius: 1rem;
+}
+
+.general_button:hover{
+  background-color: #15945a;
+}
+
 /*Navbars*/
 .navbar-element{
   color: #2a2a2a;
